# Periscope

./: Cargo.toml  README.md
src/: cache.rs  config.rs  display.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/idl/: fetcher.rs  legacy.rs  mod.rs  types.rs
